tests/baselines/reference/privateNameNotAccessibleOutsideDefiningClass.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts(7,9): error TS18016: Private identifiers are not allowed outside class bodies.


==== tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts (1 errors) ====
    // @target es6
    
    class A {
        #foo: number = 3;
    }
    
    new A().#foo = 4;               // Error
            ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    